--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@kikinteractive/kik": "^2.0.3",
     "http": "0.0.0",
+    "quadkeytools": "0.0.2",
     "request": "^2.72.0",
     "util": "^0.10.3"
   }
